mdt_cli/tests/snapshots/snapshots__typescript_workspace_check_stale.snap
---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpw3AMIB
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Check failed.
  stale consumers: 3

Stale consumers:
  block `installGuide` at readme.md:7:1
  block `apiDocs` at readme.md:15:1
  block `apiDocs` at src/index.ts:2:4

3 consumer block(s) are out of date. Run `mdt update`.
