mdt_cli/tests/snapshots/snapshots__typescript_workspace_update_index_ts.snap
---
source: mdt_cli/tests/snapshots.rs
expression: index_ts
---
/**
 * <!-- {=apiDocs|trim|indent:" * "} --> * A sample TypeScript library.

 * ## Usage

 * ```ts
 * import { createClient } from "my-lib";

 * const client = createClient();
 * ```<!-- {/apiDocs} -->
 */
export function createClient() {
	return {};
}
